--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,10 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
+    <uses-feature
+    android:glEsVersion="0x00020000"
+    android:required="true"/>
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/wave_icon"
