--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
+            android:theme="@style/AppTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -37,29 +37,9 @@
             android:parentActivityName=".MainActivity">
 
         </activity>
-        <activity
-            android:name=".FrontActivity"
-            android:label="@string/title_activity_front" >
-            <intent-filter>
-                <action android:name="android.intent.action.FRONT" />
 
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".LocationActivity"
-            android:label="@string/title_activity_location" >
-            <intent-filter>
-                <action android:name="android.intent.action.LOCATION" />
-                <category android:name="android.intent.category.APP_MAPS" />
-            </intent-filter>
-        </activity>
 
-        <meta-data android:name="com.google.android.gms.version"
-            android:value="5089000" />
-        <meta-data
-        android:name="com.google.android.maps.v2.API_KEY"
-        android:value="AIzaSyDONe5pJQSFuLamoUXR5McF8LTDTvWlqoU"/>
+
 
     </application>
 
