--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.SEND_SMS"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
 
     <!--permission for map-->
@@ -16,6 +17,17 @@
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
+    <!--Schedule Receiver -->
+    <receiver android:name=".ScheduleReceiver">
+
+
+     <intent>
+        <action android:name="ScheduleIntent"
+                android:process=":remote"/>
+    </intent>
+
+    </receiver>
 
     <uses-feature
     android:glEsVersion="0x00020000"
