--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.tranthy.project" >
 
-
+    <!--permission for misc-->
     <uses-permission android:name="android.permission.FLASHLIGHT"/>
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="android.permission.SEND_SMS"/>
-    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+
 
 
     <!--permission for map-->
@@ -18,14 +17,9 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
-    <!--Schedule Receiver -->
-    <receiver android:name=".ScheduleReceiver">
-     <intent-filter>
-        <action android:name="Send_INFO_MSG"/>
-    </intent-filter>
-
-    </receiver>
-
+    <!--permission for schedule sms-->
+    <uses-permission android:name="android.permission.SEND_SMS"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <uses-feature
     android:glEsVersion="0x00020000"
     android:required="true"/>
@@ -84,6 +78,14 @@
             android:parentActivityName=".MainActivity">
 
             </activity>
+
+        <!--Schedule Receiver -->
+        <receiver android:name=".ScheduleReceiver">
+            <intent-filter>
+                <action android:name="Send_INFO_MSG"/>
+            </intent-filter>
+        </receiver>
+        <service android:enabled="true" android:name=".LocationService" />
     </application>
 
 </manifest>
