the alert will continue to run even app is closed have to reopen the app to deactivate the alert

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -87,7 +87,7 @@
         <!--Schedule Receiver -->
         <receiver android:name=".ScheduleReceiver">
             <intent-filter>
-                <action android:name="Send_INFO_MSG"/>
+                <action android:name="ALERT_ACTIVATE"/>
             </intent-filter>
         </receiver>
         <service android:enabled="true" android:name=".LocationService" />
