--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,14 +31,15 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/main_icon"
+        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <uses-library android:name="com.google.android.maps"/>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme" >
+            android:theme="@style/AppTheme"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -73,7 +74,7 @@
             android:parentActivityName=".MainActivity">
 
             </activity>
-        <activity android:name=".MessageSetting"
+        <activity android:name=".EmergencyContact"
             android:label="@string/message_setting"
             android:parentActivityName=".MainActivity">
 
