--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,44 +2,45 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.tranthy.project" >
 
-    <!--permission for misc-->
-    <uses-permission android:name="android.permission.FLASHLIGHT"/>
-    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <!-- permission for misc -->
+    <uses-permission android:name="android.permission.FLASHLIGHT" />
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <!--For sending Email-->
-    <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS"></uses-permission>
-    <uses-permission android:name="android.permission.GET_ACCOUNTS"></uses-permission>
-    <uses-permission android:name="android.permission.MANAGE_ACCOUNTS"></uses-permission>
-    <uses-permission android:name="android.permission.USE_CREDENTIALS"></uses-permission>
-    <uses-permission android:name="com.android.email.permission.ACCESS_PROVIDER"/>
+    <!-- For sending Email -->
+    <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
+    <uses-permission android:name="android.permission.USE_CREDENTIALS" />
+    <uses-permission android:name="com.android.email.permission.ACCESS_PROVIDER" />
 
+    <!-- permission for map -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
-    <!--permission for map-->
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <!-- permission for schedule sms -->
+    <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
-    <!--permission for schedule sms-->
-    <uses-permission android:name="android.permission.SEND_SMS"/>
-    <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <uses-feature
-    android:glEsVersion="0x00020000"
-    android:required="true"/>
+        android:glEsVersion="0x00020000"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <uses-library android:name="com.google.android.maps"/>
+        <uses-library android:name="com.google.android.maps" />
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -49,49 +50,57 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.tranthy.project.MainActivity" />
-
         </activity>
-        <!--I declare Contact Setting activity here-->
+        <!-- I declare Contact Setting activity here -->
         <activity
             android:name=".ContactSetting"
             android:label="@string/contact_setting"
-            android:parentActivityName=".MainActivity">
-
+            android:parentActivityName=".MainActivity" >
         </activity>
-        <activity android:name=".MyLocation"
+        <activity
+            android:name=".MyLocation"
             android:label="@string/check_location"
-            android:parentActivityName=".MainActivity">
-
+            android:parentActivityName=".MainActivity" >
         </activity>
-        <!--Declare the code for map here.Code accessed valid, please do not delete-->
-        <meta-data android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version"/>
-        <meta-data android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyD2x6y2cCChczAgIIfIQ6dwtekTmzgXBmg"/>
+        <!-- Declare the code for map here.Code accessed valid, please do not delete -->
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyD2x6y2cCChczAgIIfIQ6dwtekTmzgXBmg" />
 
-        <activity android:name=".MessageHistory"
+        <activity
+            android:name=".MessageHistory"
             android:label="@string/message_history"
-            android:parentActivityName=".MainActivity">
-
-            </activity>
-        <activity android:name=".EmergencyContact"
+            android:parentActivityName=".MainActivity" >
+        </activity>
+        <activity
+            android:name=".EmergencyContact"
             android:label="@string/message_setting"
-            android:parentActivityName=".MainActivity">
-
-            </activity>
-        <activity android:name=".AlertSetting"
+            android:parentActivityName=".MainActivity" >
+        </activity>
+        <activity
+            android:name=".AlertSetting"
             android:label="@string/alert_setting"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".MainActivity" >
+        </activity>
 
-            </activity>
-
-        <!--Schedule Receiver -->
-        <receiver android:name=".ScheduleReceiver">
+        <!-- Schedule Receiver -->
+        <receiver android:name=".ScheduleReceiver" >
             <intent-filter>
-                <action android:name="ALERT_ACTIVATE"/>
+                <action android:name="ALERT_ACTIVATE" />
             </intent-filter>
         </receiver>
-        <service android:enabled="true" android:name=".LocationService" />
+
+        <service
+            android:name=".LocationService"
+            android:enabled="true" />
+
+        <activity
+            android:name=".SOSActivity"
+            android:label="@string/title_activity_sos" >
+        </activity>
     </application>
 
 </manifest>
